--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <!-- Home -->
     <section id="home" class="content-section active-section h-screen flex flex-col md:flex-row items-center justify-center p-6 gap-8">
       <div data-aos="fade-right">
-        <img src="images/angelprofile.JPG" 
+        <img src="IMG_20251101_161543.png" 
              alt="Angel Mae Unabia" 
              class="w-64 h-64 rounded-full object-cover shadow-lg floating">
       </div>
