--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
       <h2 class="text-3xl font-bold mb-6 text-center">Technical Skills</h2>
       <div class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 gap-6 text-center">
         <p>Hardware & Software Troubleshooting</p>
-        <p>LAN / Network Configuration</p>
+        <p>LAN / LAN / Network Configuration</p>
         <p>Microsoft 365 & Teams</p>
         <p>Active Directory & User Management</p>
         <p>System Installation & Imaging</p>
