--- a/index.html
+++ b/index.html
@@ -60,11 +60,11 @@
 
     <!-- Home -->
     <section id="home" class="content-section active-section h-screen flex flex-col md:flex-row items-center justify-center p-6 gap-8">
-       <div data-aos="fade-right">
-    <img src="IMG_20251101_161543.png" 
-         alt="Angel Mae Unabia" 
-         class="w-64 h-64 rounded-full object-cover shadow-lg floating">
-  </div>
+      <div data-aos="fade-right">
+        <img src="IMG_20251101_161543.png" 
+             alt="Angel Mae Unabia" 
+             class="w-64 h-64 rounded-full object-cover shadow-lg floating">
+      </div>
       <div class="text-center md:text-left space-y-2" data-aos="fade-left">
         <p class="text-xl">Hello, I am</p>
         <h1 class="text-5xl font-bold">Angel Mae <br> Unabia</h1>
@@ -73,14 +73,14 @@
     </section>
 
     <!-- About -->
-    <section id="about" class="about-section">
-      <h2>About Me</h2>
+    <section id="about" class="about-section p-8">
+      <h2 class="text-3xl font-bold mb-4">About Me</h2>
       <p>
         I am a Bachelor of Science in Information Technology graduate with experience in providing technical 
         support, troubleshooting, and system maintenance. I have handled IT equipment setup, LAN configurations, 
         software installation, and assisted users with technical issues across hardware, software, and networks.
       </p>
-      <p>
+      <p class="mt-2">
         My background in both IT support and system development enables me to quickly diagnose and resolve 
         problems, document technical procedures, and deliver effective solutions to maintain smooth IT operations.
       </p>
@@ -91,7 +91,7 @@
       <h2 class="text-3xl font-bold mb-6 text-center">Technical Skills</h2>
       <div class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 gap-6 text-center">
         <p>Hardware & Software Troubleshooting</p>
-        <p>LAN / LAN / Network Configuration</p>
+        <p>LAN / Network Configuration</p>
         <p>Microsoft 365 & Teams</p>
         <p>Active Directory & User Management</p>
         <p>System Installation & Imaging</p>
@@ -104,24 +104,58 @@
     <!-- Experience -->
     <section id="experience" class="content-section active-section p-8" data-aos="fade-up">
       <h2 class="text-3xl font-bold mb-6">Experience</h2>
-      
-      <h3 class="text-xl font-bold">IT Support / Web Developer – OJT (6 months) @ Sibonga NHS</h3>
+
+      <h3 class="text-xl font-bold">Logix BPO - Junior IT Support Staff</h3>
+      <p class="italic mb-2">September – October 2025 (1 month)</p>
       <ul class="list-disc ml-6 mb-6">
-        <li>Provided technical support for PC, printer, and network troubleshooting</li>
-        <li>Configured and maintained LAN connections and shared drives</li>
-        <li>Assisted with software installation, updates, and user access</li>
-        <li>Managed IT equipment inventory and performed preventive maintenance</li>
-        <li>Handled digital documentation and data backup tasks</li>
-        <li>Developed and maintained internal systems to improve workflow</li>
+        <li>Provided comprehensive daily IT support, resolving technical issues to maintain uninterrupted business operations.</li>
+        <li>Managed system performance optimization for Windows and Linux platforms, ensuring efficient system functionality.</li>
+        <li>Administered Microsoft 365, Google Workspace, Active Directory management, GPO, RDP, Slack, CRM, and Outlook accounts, improving user access, security, and productivity.</li>
+        <li>Assisted in system administration tasks, supporting network performance and reliability.</li>
+        <li>Performed basic network maintenance tasks, providing stable and reliable connectivity across departments.</li>
+        <li>Responded promptly to IT tickets and service requests, delivering both remote and on-site technical support.</li>
+        <li>Ensured network performance and connectivity met organizational standards through regular maintenance activities.</li>
+        <li>Facilitated new employee onboarding and offboarding processes, including account setup, access permissions, and device configuration.</li>
+        <li>Conducted thorough asset management, keeping IT equipment inventory and documentation up-to-date and accurate.</li>
+        <li>Organized IT records, user manuals, and system configuration files, ensuring easy access and reference.</li>
+        <li>Monitored and maintained CCTV systems, contributing to office security and operational effectiveness.</li>
       </ul>
 
-      <h3 class="text-xl font-bold">Freelance IT Support / System Developer (2021–Present)</h3>
+      <h3 class="text-xl font-bold">Sibonga National High School (On-the-Job Training)</h3>
+      <p class="italic mb-2">IT Support & Web Developer – 6 months</p>
+      <ul class="list-disc ml-6 mb-6">
+        <li>Provided technical support through hardware and software troubleshooting.</li>
+        <li>Monitored Windows Server and ensured proper connectivity and access across all user PCs.</li>
+        <li>Assisted in encoding and managing school documents.</li>
+        <li>Configured and maintained LAN connections.</li>
+        <li>Supported software and system installation and updates.</li>
+        <li>Handled inventory of IT equipment and recorded asset movements.</li>
+        <li>Developed a Library Management System as part of project contribution.</li>
+      </ul>
+
+      <h3 class="text-xl font-bold">Freelance Web Developer / Capstone Project</h3>
+      <p class="italic mb-2">2021 – August 2025</p>
+      <ul class="list-disc ml-6 mb-6">
+        <li>Designed and developed responsive web systems for clients.</li>
+        <li>Built frontend interfaces using HTML, CSS, and JavaScript.</li>
+        <li>Developed backend functionality with PHP, MySQL, API integration, and Laravel.</li>
+        <li>Collaborated with clients and teams to meet project requirements and deadlines.</li>
+        <li>Managed full project lifecycle from planning, testing, to deployment.</li>
+      </ul>
+
+      <h3 class="text-xl font-bold">Mana Brenda BBQ House - Service Crew</h3>
+      <p class="italic mb-2">Part-Time Job (October 2024 – August 2025)</p>
+      <ul class="list-disc ml-6 mb-6">
+        <li>Served customers and handled food orders efficiently.</li>
+        <li>Maintained cleanliness and organization in the work area.</li>
+        <li>Assisted in preparing food and ensuring good customer service.</li>
+      </ul>
+
+      <h3 class="text-xl font-bold">STSVI - Elementary Tutor</h3>
+      <p class="italic mb-2">(Modular/Online Learning, 2020 – 2021)</p>
       <ul class="list-disc ml-6">
-        <li>Provided remote technical assistance and troubleshooting</li>
-        <li>Supported small businesses with software setup, data management, and email configuration</li>
-        <li>Developed simple web-based systems for record tracking and reporting</li>
-        <li>Assisted in network setup, connectivity issues, and security updates</li>
-        <li>Managed documentation and end-user training for implemented systems</li>
+        <li>Assisted elementary students with modular and online lessons.</li>
+        <li>Helped explain subjects and guided them in completing learning activities.</li>
       </ul>
     </section>
 
