--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
       <h2 class="text-3xl font-bold mb-4">About Me</h2>
       <p>
         I am a Bachelor of Science in Information Technology graduate with experience in providing technical 
-        support, troubleshooting, and system maintenance. I have handled IT equipment setup, LAN configurations, 
+        support, troubleshooting, and system maintenance. I have handled IT equipment setup, LAN/VLAN configurations, 
         software installation, and assisted users with technical issues across hardware, software, and networks.
       </p>
       <p class="mt-2">
