--- a/index.html
+++ b/index.html
@@ -86,20 +86,37 @@
       </p>
     </section>
 
-    <!-- Skills -->
-    <section id="skills" class="content-section active-section p-8">
-      <h2 class="text-3xl font-bold mb-6 text-center">Technical Skills</h2>
-      <div class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 gap-6 text-center">
-        <p>Hardware & Software Troubleshooting</p>
-        <p>LAN / Network Configuration</p>
-        <p>Microsoft 365 & Teams</p>
-        <p>Active Directory & User Management</p>
-        <p>System Installation & Imaging</p>
-        <p>Printer & Peripheral Setup</p>
-        <p>Ticketing Systems</p>
-        <p>Basic Web & Database Management</p>
-      </div>
-    </section>
+   <!-- Skills -->
+<section id="skills" class="content-section active-section p-8">
+  <h2 class="text-3xl font-bold mb-6 text-center">Technical Skills</h2>
+  <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-6 text-center">
+    <div data-aos="fade-up" data-aos-delay="100" class="bg-gray-900 bg-opacity-60 p-4 rounded-xl shadow-md hover:shadow-lg transition-all">
+      Hardware & Software Troubleshooting
+    </div>
+    <div data-aos="fade-up" data-aos-delay="200" class="bg-gray-900 bg-opacity-60 p-4 rounded-xl shadow-md hover:shadow-lg transition-all">
+      LAN/VLAN / Network Configuration
+    </div>
+    <div data-aos="fade-up" data-aos-delay="300" class="bg-gray-900 bg-opacity-60 p-4 rounded-xl shadow-md hover:shadow-lg transition-all">
+      Microsoft 365 & Teams
+    </div>
+    <div data-aos="fade-up" data-aos-delay="400" class="bg-gray-900 bg-opacity-60 p-4 rounded-xl shadow-md hover:shadow-lg transition-all">
+      Active Directory & User Management
+    </div>
+    <div data-aos="fade-up" data-aos-delay="500" class="bg-gray-900 bg-opacity-60 p-4 rounded-xl shadow-md hover:shadow-lg transition-all">
+      System Installation & Imaging
+    </div>
+    <div data-aos="fade-up" data-aos-delay="600" class="bg-gray-900 bg-opacity-60 p-4 rounded-xl shadow-md hover:shadow-lg transition-all">
+      Printer & Peripheral Setup
+    </div>
+    <div data-aos="fade-up" data-aos-delay="700" class="bg-gray-900 bg-opacity-60 p-4 rounded-xl shadow-md hover:shadow-lg transition-all">
+      Ticketing Systems
+    </div>
+    <div data-aos="fade-up" data-aos-delay="800" class="bg-gray-900 bg-opacity-60 p-4 rounded-xl shadow-md hover:shadow-lg transition-all">
+      Basic Web & Database Management
+    </div>
+  </div>
+</section>
+
 
     <!-- Experience -->
     <section id="experience" class="content-section active-section p-8" data-aos="fade-up">
