--- a/index.html
+++ b/index.html
@@ -81,9 +81,12 @@
         software installation, and assisted users with technical issues across hardware, software, and networks.
       </p>
       <p class="mt-2">
-        My background in both IT support and system development enables me to quickly diagnose and resolve 
-        problems, document technical procedures, and deliver effective solutions to maintain smooth IT operations.
-      </p>
+  My background in both IT support and system development enables me to quickly diagnose and resolve 
+  problems, document technical procedures, and deliver effective solutions to maintain smooth IT operations 
+  while ensuring users receive reliable and professional assistance. I always strive to deliver good service 
+  by being patient, proactive, and attentive to every user's needs.
+</p>
+
     </section>
 
    <!-- Skills -->
