--- a/index.html
+++ b/index.html
@@ -87,39 +87,73 @@
   by being patient, proactive, and attentive to every user's needs.
 </p>
 
-    </section>
-
    <!-- Skills -->
 <section id="skills" class="content-section active-section p-8">
-  <h2 class="text-3xl font-bold mb-6 text-center">Technical Skills</h2>
-  <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-6 text-center">
-    <div data-aos="fade-up" data-aos-delay="100" class="bg-gray-900 bg-opacity-60 p-4 rounded-xl shadow-md hover:shadow-lg transition-all">
-      Hardware & Software Troubleshooting
+  <h2 class="text-3xl font-bold mb-10 text-center text-yellow-400">Skills</h2>
+
+  <!-- Technical Skills -->
+  <div data-aos="fade-up" class="mb-10">
+    <h3 class="text-2xl font-semibold mb-6 text-center underline underline-offset-4 decoration-yellow-400">
+      Technical Skills
+    </h3>
+    <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-6 text-center">
+      <div data-aos="fade-up" data-aos-delay="100" class="bg-gray-900 bg-opacity-60 p-4 rounded-xl shadow-md hover:shadow-lg transition-all">
+        Hardware & Software Troubleshooting
+      </div>
+      <div data-aos="fade-up" data-aos-delay="200" class="bg-gray-900 bg-opacity-60 p-4 rounded-xl shadow-md hover:shadow-lg transition-all">
+        Installation of OS, Software, and Updates
+      </div>
+      <div data-aos="fade-up" data-aos-delay="300" class="bg-gray-900 bg-opacity-60 p-4 rounded-xl shadow-md hover:shadow-lg transition-all">
+        Printer & Peripheral Device Support
+      </div>
+      <div data-aos="fade-up" data-aos-delay="400" class="bg-gray-900 bg-opacity-60 p-4 rounded-xl shadow-md hover:shadow-lg transition-all">
+        Basic Programming & Software Development
+      </div>
+      <div data-aos="fade-up" data-aos-delay="500" class="bg-gray-900 bg-opacity-60 p-4 rounded-xl shadow-md hover:shadow-lg transition-all">
+        Database Management (MySQL, PHPMyAdmin)
+      </div>
+      <div data-aos="fade-up" data-aos-delay="600" class="bg-gray-900 bg-opacity-60 p-4 rounded-xl shadow-md hover:shadow-lg transition-all">
+        Knowledge of Windows/Linux Environments
+      </div>
+      <div data-aos="fade-up" data-aos-delay="700" class="bg-gray-900 bg-opacity-60 p-4 rounded-xl shadow-md hover:shadow-lg transition-all">
+        Azure, Microsoft 365, Slack, CRM, GPO & Active Directory
+      </div>
+      <div data-aos="fade-up" data-aos-delay="800" class="bg-gray-900 bg-opacity-60 p-4 rounded-xl shadow-md hover:shadow-lg transition-all">
+        System Administration & Technical Support
+      </div>
+      <div data-aos="fade-up" data-aos-delay="900" class="bg-gray-900 bg-opacity-60 p-4 rounded-xl shadow-md hover:shadow-lg transition-all">
+        Documentation & Asset Inventory Handling
+      </div>
+      <div data-aos="fade-up" data-aos-delay="1000" class="bg-gray-900 bg-opacity-60 p-4 rounded-xl shadow-md hover:shadow-lg transition-all">
+        LAN/VLAN & Network Configuration
+      </div>
     </div>
-    <div data-aos="fade-up" data-aos-delay="200" class="bg-gray-900 bg-opacity-60 p-4 rounded-xl shadow-md hover:shadow-lg transition-all">
-      LAN/VLAN / Network Configuration
-    </div>
-    <div data-aos="fade-up" data-aos-delay="300" class="bg-gray-900 bg-opacity-60 p-4 rounded-xl shadow-md hover:shadow-lg transition-all">
-      Microsoft 365 & Teams
-    </div>
-    <div data-aos="fade-up" data-aos-delay="400" class="bg-gray-900 bg-opacity-60 p-4 rounded-xl shadow-md hover:shadow-lg transition-all">
-      Active Directory & User Management
-    </div>
-    <div data-aos="fade-up" data-aos-delay="500" class="bg-gray-900 bg-opacity-60 p-4 rounded-xl shadow-md hover:shadow-lg transition-all">
-      System Installation & Imaging
-    </div>
-    <div data-aos="fade-up" data-aos-delay="600" class="bg-gray-900 bg-opacity-60 p-4 rounded-xl shadow-md hover:shadow-lg transition-all">
-      Printer & Peripheral Setup
-    </div>
-    <div data-aos="fade-up" data-aos-delay="700" class="bg-gray-900 bg-opacity-60 p-4 rounded-xl shadow-md hover:shadow-lg transition-all">
-      Ticketing Systems
-    </div>
-    <div data-aos="fade-up" data-aos-delay="800" class="bg-gray-900 bg-opacity-60 p-4 rounded-xl shadow-md hover:shadow-lg transition-all">
-      Basic Web & Database Management
+  </div>
+
+  <!-- Professional Skills -->
+  <div data-aos="fade-up">
+    <h3 class="text-2xl font-semibold mb-6 text-center underline underline-offset-4 decoration-yellow-400">
+      Professional Skills
+    </h3>
+    <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-6 text-center">
+      <div data-aos="fade-up" data-aos-delay="100" class="bg-gray-900 bg-opacity-60 p-4 rounded-xl shadow-md hover:shadow-lg transition-all">
+        Computer Literate (MS Word, Excel, PowerPoint)
+      </div>
+      <div data-aos="fade-up" data-aos-delay="200" class="bg-gray-900 bg-opacity-60 p-4 rounded-xl shadow-md hover:shadow-lg transition-all">
+        Problem Solving & Fast Learner
+      </div>
+      <div data-aos="fade-up" data-aos-delay="300" class="bg-gray-900 bg-opacity-60 p-4 rounded-xl shadow-md hover:shadow-lg transition-all">
+        Multitasking & Good Communication Skills
+      </div>
+      <div data-aos="fade-up" data-aos-delay="400" class="bg-gray-900 bg-opacity-60 p-4 rounded-xl shadow-md hover:shadow-lg transition-all">
+        Eager to Learn & Adapt to New Technologies
+      </div>
+      <div data-aos="fade-up" data-aos-delay="500" class="bg-gray-900 bg-opacity-60 p-4 rounded-xl shadow-md hover:shadow-lg transition-all">
+        Ability to Work Under Pressure & Handle Multiple Tasks
+      </div>
     </div>
   </div>
 </section>
-
 
     <!-- Experience -->
     <section id="experience" class="content-section active-section p-8" data-aos="fade-up">
