--- a/index.html
+++ b/index.html
@@ -213,14 +213,49 @@
       </ul>
     </section>
 
-    <!-- Education -->
-    <section id="education" class="content-section active-section p-8" data-aos="fade-up">
-      <h2 class="text-3xl font-bold mb-6 text-white">Education</h2>
-      <div style="color: #fff;">
-        <p><strong>Bachelor of Science in Information Technology major in Software Development</strong></p>
-        <p>Sibonga Community College – (2025)</p>
-      </div>
-    </section>
+<!-- Reference -->
+<section id="reference" class="content-section p-8" data-aos="fade-up">
+  <h2 class="text-3xl font-bold mb-6 text-yellow-400 text-center">Reference</h2>
+  <div class="bg-gray-900 bg-opacity-60 max-w-md mx-auto p-6 rounded-xl shadow-md text-center text-white hover:shadow-lg transition-all">
+    <p class="text-lg font-semibold">Jeric C. Japal</p>
+    <p class="italic">IT Manager – Logix BPO</p>
+    <p class="mt-2">📞 0991 208 7057</p>
+  </div>
+</section>
+
+<!-- Education -->
+<section id="education" class="content-section active-section p-8" data-aos="fade-up">
+  <h2 class="text-3xl font-bold mb-8 text-yellow-400 text-center">Education</h2>
+
+  <div class="space-y-6 text-white max-w-3xl mx-auto">
+
+    <div class="bg-gray-900 bg-opacity-60 p-5 rounded-xl shadow-md hover:shadow-lg transition-all" data-aos="fade-right" data-aos-delay="100">
+      <h3 class="text-xl font-semibold">Sibonga Community College</h3>
+      <p class="italic">Bachelor of Science in Information Technology (Major in Software Development)</p>
+      <p class="mt-1 text-sm text-gray-300">2024 – 2025</p>
+    </div>
+
+    <div class="bg-gray-900 bg-opacity-60 p-5 rounded-xl shadow-md hover:shadow-lg transition-all" data-aos="fade-right" data-aos-delay="200">
+      <h3 class="text-xl font-semibold">Datamex Institute of Computer Technology – Carcar Branch</h3>
+      <p class="italic">Senior High School – ICT Strand</p>
+      <p class="mt-1 text-sm text-gray-300">2020 – 2021 • With Honors</p>
+    </div>
+
+    <div class="bg-gray-900 bg-opacity-60 p-5 rounded-xl shadow-md hover:shadow-lg transition-all" data-aos="fade-right" data-aos-delay="300">
+      <h3 class="text-xl font-semibold">Carcar Central National High School</h3>
+      <p class="italic">(Secondary Education)</p>
+      <p class="mt-1 text-sm text-gray-300">2018 – 2019 • With Honors</p>
+    </div>
+
+    <div class="bg-gray-900 bg-opacity-60 p-5 rounded-xl shadow-md hover:shadow-lg transition-all" data-aos="fade-right" data-aos-delay="400">
+      <h3 class="text-xl font-semibold">Carcar Central Elementary School</h3>
+      <p class="italic">(Primary Education)</p>
+      <p class="mt-1 text-sm text-gray-300">2014 – 2015</p>
+    </div>
+
+  </div>
+</section>
+
 
     <!-- Contact -->
     <section id="contact" class="content-section active-section p-8" data-aos="fade-up">
