--- a/index.html
+++ b/index.html
@@ -188,13 +188,31 @@
       </ul>
 
       <h3 class="text-xl font-bold">Freelance Web Developer / Capstone Project</h3>
-      <p class="italic mb-2">2021 – August 2025</p>
-      <ul class="list-disc ml-6 mb-6">
-        <li>Designed and developed responsive web systems for clients.</li>
+      <p class="italic mb-2 text-gray-300">2021 – August 2025</p>
+      <ul class="list-disc ml-6 mb-6 space-y-2">
+        <li>Designed and developed responsive web systems for clients and academic projects.</li>
         <li>Built frontend interfaces using HTML, CSS, and JavaScript.</li>
-        <li>Developed backend functionality with PHP, MySQL, API integration, and Laravel.</li>
+        <li>Developed backend functionality with PHP, MySQL, Laravel, and API integration.</li>
         <li>Collaborated with clients and teams to meet project requirements and deadlines.</li>
-        <li>Managed full project lifecycle from planning, testing, to deployment.</li>
+        <li>Handled full project lifecycle — from planning, database design, testing, to deployment.</li>
+      </ul>
+
+      <h4 class="text-lg font-semibold mb-2 text-yellow-400">Projects Developed:</h4>
+      <ul class="list-disc ml-6 space-y-2 text-gray-200">
+        <li>
+          <strong>Diane’s Seafood House Sales and Inventory System</strong> – Built a system to manage inventory, automate transactions, and generate reports for business efficiency.
+        </li>
+        <li>
+          <strong>Sibonga National High School Library Management System</strong> – Created a system for managing books, tracking borrowers, and maintaining accurate library records.
+        </li>
+        <li>
+          <strong>Water Billing Information System for Guimbaliwan Association</strong> – Developed a web-based billing system to record water consumption, automate billing, and improve data tracking.
+        </li>
+        <li>
+          <strong>E-Commerce Website – Elite Store</strong> – Designed and deployed a responsive online shopping platform with product listings, cart system, and checkout process.
+          <br>
+          🌐 <a href="https://ecommerce-elitestore.netlify.app/" target="_blank" class="text-yellow-400 hover:underline">https://ecommerce-elitestore.netlify.app/</a>
+        </li>
       </ul>
 
       <h3 class="text-xl font-bold">Mana Brenda BBQ House - Service Crew</h3>
