--- a/index.html
+++ b/index.html
@@ -161,16 +161,16 @@
    <section id="experience" class="content-section p-8" data-aos="fade-up">
      <h2 class="text-3xl font-bold mb-6">Experience</h2>
 
-     <h3 class="text-xl font-bold">Logix BPO - Junior IT Support Staff</h3>
-     <p class="italic mb-2">September – October 2025 (1 month)</p>
+     <h3 class="text-xl font-bold">Logix BPO - IT Support Staff & System Administrator</h3>
+     <p class="italic mb-2">September – October 2025</p>
      <ul class="list-disc ml-6 mb-6">
-       <li>Provided daily IT support, resolving technical issues for Windows and Linux environments.</li>
-       <li>Managed Microsoft 365, Google Workspace, Active Directory, GPO, RDP, Slack, CRM, and Outlook accounts.</li>
-       <li>Performed system administration tasks including network monitoring, asset management, and troubleshooting.</li>
-       <li>Configured virtual machines using VirtualBox and VMware for testing and internal projects.</li>
-       <li>Maintained LAN/VLAN configurations and monitored server performance for optimal uptime.</li>
-       <li>Documented IT procedures, incident tickets, and system configurations for reference and compliance.</li>
-     </ul>
+  <li>Provided daily IT support, resolving technical issues for Windows and Linux environments.</li>
+  <li>Managed Microsoft 365, Google Workspace, Active Directory, GPO, RDP, Slack, CRM, SLA's, Outlook accounts, and IT ticketing systems.</li>
+  <li>Performed system administration tasks including network monitoring, asset management, and troubleshooting.</li>
+  <li>Configured virtual machines using VirtualBox and VMware for testing and internal projects.</li>
+  <li>Maintained LAN/VLAN configurations and monitored server performance for optimal uptime.</li>
+  <li>Documented IT procedures, incident tickets, and system configurations for reference and compliance.</li>
+</ul>
 
      <h3 class="text-xl font-bold">Sibonga National High School (OJT)</h3>
      <p class="italic mb-2">IT Support & Web Developer – 6 months</p>
